# url_checker

./: .gitignore  README.md  pyproject.toml  url_checker.py  urls.txt
tests/: test_url_checker.py
