[tool.poetry]
name = "url-checker"
version = "0.1.0"
description = "проверка списка строк"
authors = ["Galitsin Nikolay <ngalitsin@gmail.com>"]
readme = "README.md"
packages = [{include = "url_checker"}]

[tool.poetry.dependencies]
python = "^3.8"
validators = "^0.20.0"
requests = "^2.28.1"
pytest = "^7.2.0"
coverage = "^6.5.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
